# backend/src/invite/invite.model.ts
@@ -1,0 +1,9 @@
+export interface Invite {
+    id: string;
+    listId: string;
+    inviter: string;
+    invitee: string;
+    token: string;
+    expiresAt: Date;
+    createdAt: Date;
+}
